add simulation and result chapters

--- a/intro.tex
+++ b/intro.tex
@@ -38,11 +38,13 @@ O foco deste trabalho é a sinalização semafórica das vias urbanas.
 
 A Figura 1.1 apresenta exemplos de sinalização semafórica, utilizados no controle de fluxos veicular (\ref{veicular}) e de pedestres (\ref{pedestre}).
 
+Além de apresentar um sistema que realiza o controle de sinalização semafórica de maneira automatizada, também serão expostos resultados de simulações realizadas, com o intuito de demonstrar o impacto do sistema em cruzamentos de vias urbanas.
+
 \section{Objetivo}
 
 O objetivo desse trabalho é apresentar produtos que têm como finalidade solucionar os problemas apresentados na introdução ao assunto: gerenciamento e controle da segurança e do fluxo de veículos e pedestres nas vias urbanas. A solução apresentada é um conjunto de sistemas, com objetivos específicos cada, que, integrados, são capazes de realizar as atividades desejadas de controle de sinalização semafórica.
 
-Ao final dessa apresentação, serão propostas possíveis melhorias a serem implementadas aos projetos, com suas devidas justificativas e mudanças necessárias.
+Além disso, serão apresentadas simulações realizadas, sob diferentes configurações do sistema, de modo a demonstrar os diferentes meios de abordagem para solucionar o problema de organização de sinalização semafórica.
 
 
 \section{Estrutura do trabalho}
@@ -51,7 +53,7 @@ Esse trabalho é composto por 5 capítulos, sendo este o primeiro, e os 4 restan
 
 \begin{itemize}
     \item Capítulo 2 - Nesse capítulo são descritas as tecnologias e fundamentações teóricas das soluções propostas
-    \item Capítulo 3 - Nesse capítulo são descritos os detalhes dos sistemas implementados
-    \item Capítulo 4 - Nesse capítulo é descrita a integração entre os sistemas apresentados
-    \item Capítulo 5 - Nesse capítulo é apresentado um relato das experiências adquiridas e objetivos alcançados
+    \item Capítulo 3 - Nesse capítulo são descritos os detalhes dos sistemas implementados e como ocorre a integração entre eles
+    \item Capítulo 4 - Nesse capítulo é apresentado o software utilizado para realizar as simulações e os cenários simulados
+    \item Capítulo 5 - Nesse capítulo são analisados os dados obtidos das simulações
 \end{itemize}
