--- a/main.tex
+++ b/main.tex
@@ -145,7 +145,7 @@ A mudança não virá se esperarmos por outra pessoa ou outros tempos. Nós somo
 \input{resumo.tex}
 % Palavras-chave do resumo em Português
 \begin{keywords}
-    Iluminação, LED, MQTT, ESP8266
+    Trânsito, sistemas embarcados, controlador semafórico, sistema adaptativo
 \end{keywords}
 
 % Resumo em Inglês
@@ -154,7 +154,7 @@ A mudança não virá se esperarmos por outra pessoa ou outros tempos. Nós somo
 \input{abstract.tex}
 % Palavras-chave do resumo em Inglês
 \begin{keywords}
-    Illumination, LED, MQTT, ESP8266
+    Traffic, embedded systems, traffic light controller, adaptive system
 \end{keywords}
 
 % Sumário
@@ -181,9 +181,10 @@ A mudança não virá se esperarmos por outra pessoa ou outros tempos. Nós somo
 % incluí-los:
 \include{intro}
 \include{teoria}
-%\include{materiais}
 \include{projeto}
 \include{integracao}
+\include{simulacao}
+\include{analise_de_resultados}
 \include{conclusao}
 
 %%
