--- a/teoria.tex
+++ b/teoria.tex
@@ -134,7 +134,7 @@ A Figura \ref{microcontrolador} mostra o esquema de um microcontrolador, com um 
 
 O mercado de microcontroladores tem suas origens em 1974, com o TMS1000, apresentado como uma “calculadora em um \textit{chip}”, pela Texas Instruments. Esse dispositivo possuía uma capacidade de processamento de 4 \textit{bits}, velocidade de \textit{clock} de 400 KHz e execução de uma instrução a cada 6 ciclos de \textit{clock}, enquanto dispositivos modernos ultrapassam os 250 MHZ de velocidade e capacidade para realizar 330 milhões de instruções por segundo (1.3 instruções realizadas por ciclo de \textit{clock}), representando um aumento de mais de 600 vezes na velocidade de processamento.
 
-Além dos periféricos já mencionados, os microcontroladores mais modernos apresentam uma vasta gama de utilidades, como conversores de sinal analógico, portas prontas para a utilização de protocolos de comunicação, módulos \textit{bluetooth}, \ac{USB}, \ac{wifi}. Os periféricos mais relevantes para o escopo do trabalho serão explicados neste capítulo.
+Além dos periféricos já mencionados, os microcontroladores mais modernos apresentam uma vasta gama de utilidades, como conversores de sinal analógico, portas prontas para a utilização de protocolos de comunicação, módulos \textit{bluetooth}, \ac{USB}, wifi. Os periféricos mais relevantes para o escopo do trabalho serão explicados neste capítulo.
 
 \subsubsection{Conversor de sinal analógico}
 
