--- a/siglas.tex
+++ b/siglas.tex
@@ -14,6 +14,8 @@
     \acro{RX}{\textit{Receiver}}
     \acro{TX}{\textit{Transmitter}}
     \acro{USART}{\textit{Universal Synchronous and Asynchronous Receiver-Transmitter}}
+    \acro{USB}{\textit{Universal Serial Bus}}
+    \acro{TBJ}{Transistor Bipolar de Junção}
     \acro{TRIAC}{\textit{Triode for Alternating Current}}
     \acro{CPU}{\textit{Central Processing Unit}}
 \end{acronym}
